<resources>
    <string name="app_name">Print For Me</string>

    //String related to Homepage_shoplist
    <string name="shop_name">Shop Name</string>
    <string name="adress">Address of the Shop</string>
    <string name="phone_number">2345678984</string>
    <string name="print">Print</string>

    //String related to activity_details
    <string name="show">Show</string>
    <string name="choose">Choose file</string>
    <string name="Choosing_information">Choose word and pdf file less than 5MB </string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="copies">Number of Copies</string>
    <string name="minlimit">Min.</string>
    <string name="maxlimit">Max.</string>
    <string name="payable">Payable</string>
    <string name="totalPayable">Click to Check Price</string>
    <string name="pending">Order Still Pending...</string>



    <string-array name="names">
        <item>Black and White</item>
        <item>Coloured</item>
    </string-array>

    <string-array name="sided">
        <item>Single Sided</item>
        <item>Double sided</item>
    </string-array>
</resources>
