<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E4E4E4"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="rawsun.printforme.com.DetailsActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        >


        <Button
            android:id="@+id/choose"

            android:layout_marginLeft="66dp"
            android:layout_marginRight="66dp"
            android:layout_weight="1"
            android:text="@string/choose"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundbutton"
            android:paddingLeft="56dp"
            android:paddingRight="56dp"

            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"

            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/Choosing_information"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="12dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="24dp">

            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#ffffff"
                android:elevation="10dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp"
                card_view:cardMaxElevation="12dp"
                >
                <EditText

                    android:id="@+id/copies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/copies"
                    android:inputType="number"
                    android:layout_marginBottom="8dp"
                    />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#ffffff"
                android:elevation="10dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp"
                card_view:cardMaxElevation="12dp">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/from"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/minlimit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/minlimit"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/to"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/maxlimit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/maxlimit"
                        android:inputType="number" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#ffffff"
                android:elevation="10dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp"
                card_view:cardMaxElevation="12dp">

                <Spinner
                    android:id="@+id/colour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#ffffff"
                android:elevation="10dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp"
                card_view:cardMaxElevation="12dp">
                <Spinner
                    android:id="@+id/sided"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#ffffff"
                android:elevation="10dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp"
                card_view:cardMaxElevation="12dp">
                <TextView
                    android:id="@+id/totalPayable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:paddingBottom="24dp"
                    android:textStyle="bold"
                    android:padding="16dp"
                    android:text="@string/totalPayable"/>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/submit"
                android:text="@string/payable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:background="@drawable/roundbutton"
                android:paddingLeft="42dp"
                android:paddingRight="42dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
